<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rf_meas_webapp</name>
  <version>1.0.0</version>
  <description>WebApp for RadioFrequency Measurements</description>
  <maintainer email="info@dotxautomation.com">dotX Automation</maintainer>
  <license>Apache-2.0</license>

  <depend>dua_interfaces</depend>
  <depend>params_manager_py</depend>
  <depend>dua_node_py</depend>
  <depend>dua_qos_py</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
